Mtto Actividad al 70%

--- a/siscop-caritas-web/src/main/webapp/resources/omega-layout/css/personalizados.css
+++ b/siscop-caritas-web/src/main/webapp/resources/omega-layout/css/personalizados.css
@@ -14,3 +14,14 @@ and open the template in the editor.
 .input-cta-padre .ui-inputfield{
     opacity: 1!important;
 }
+
+.btn-eliminar-off{
+    background: #2399e5;
+    border: 1px solid #1f89ce;
+    color: #fff;
+}
+
+.btn-eliminar-on{
+    border: 1px solid red;
+    
+}
