--- a/siscop-caritas-web/src/main/webapp/resources/omega-layout/css/personalizados.css
+++ b/siscop-caritas-web/src/main/webapp/resources/omega-layout/css/personalizados.css
@@ -57,6 +57,20 @@ and open the template in the editor.
     position: absolute;
     top: 50%;
 }
+.btn-tree-catalogo{
+    background: none!important;
+    color: black!important;
+    border: 0px!important;
+    width: auto!important;
+}
+
+.btn-tree-catalogo-selected{
+    color:white!important;
+}
+.btn-tree-catalogo span{
+    padding: 0px!important;
+}
+
 /*
 text-decoration-line: line-through;
 
